--- a/src/assets/Css/Main.css
+++ b/src/assets/Css/Main.css
@@ -405,6 +405,10 @@ a {
   -webkit-text-fill-color: transparent;
 }
 
+#Equation #SubTitle{
+  width: 80%;
+}
+
 #Equationimg {
   margin-top: 8%;
   width: 80%;
@@ -429,6 +433,7 @@ a {
 
 #Area #SubTitle {
   color: white;
+  width: 80%;
 }
 
 #sector-bg {
@@ -511,7 +516,7 @@ a {
   color: white;
   background-color: transparent;
   outline: none;
-  border-color: white;
+  border-color: #00000026;
   border-radius: 10px;
   padding: 10px 30px;
   width: 90%;
@@ -541,7 +546,7 @@ a {
   font-size: 14px;
   font-weight: 400;
   width: 60%;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 #rr{
